fix spacing issue with price

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 
 .feed {
   flex-direction: inline-block;
-  padding-top: 72px;
+  padding-top: 71px;
   color: #285844;
 }
 
